[package]
name = "microjs"
description = "an embeddable javascript runner built for interpetting javascripts files with ease"
authors = ["joshua radin <jradin16@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT or Apache-2.0"
repository = "https://github.com/joshradin/microjs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["microjs-derive"]

[features]
default = []
derive = ["microjs-derive"]

[dependencies]
microjs-derive = { version = "0.1.0", path = "microjs-derive", optional = true }
nom = "7.1.1"
